Puliendo las rutas y la documentacion
