# proyecto_delilah/src/controllers/plato/obtenerPlatosFavoritos.js
@@ -2,17 +2,10 @@ const { favoritePlates } = require("../../models/plato");
 
 function obtenerPlatosFavoritos(req, res) {
 
-    favoritePlates(req.params.IdUsuario)
+    favoritePlates(req.user.id_usuario)
     .then((response) =>  {
 
-        console.log(response);
-
-        if(response === undefined) {
-
-            return res.status(404).send({mensaje: "Platos favoritos no encontrados"});
-        }
-
-        res.status(200).send(response);
+        response === undefined? res.status(404).send({mensaje: "No se encontraron platos favoritos"}) : res.status(200).send(response);
     })
     .catch(e => {
 
